tests/functions/errors/double_main.c.res
[36mERROR: Function already declared[0m [4min line 2
[0mint main() { return 0; }
    ^~~~
[1m[31mCompilation failed with 1 errors
[0m